css/quik.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    font: 13px Helvetica, Arial;
    width: 100%;
    margin: auto;
}

@media only screen
and (min-device-width : 0px)
and (max-device-width : 500px) { .bigscreen { display: none; }}

@media only screen
and (min-device-width : 501px){ .smallscreen { display: none; }}

#messages {
    overflow-y: scroll;
    height: 400px;
		width: auto;
}
#messages li {
    font-size: 16px;
}
#messages li:nth-child(odd) {
    /*text-align:right;*/
}
.msg_name {
    font-size: 12px;
    font-weight: bold;
    margin-bottom: 0px;
    padding-bottom: 0px;
    display: inline;
}
.msg_text {
    margin-top: 0px;
    padding-top: 0px;
    display: inline;
}
img.emoji {
    margin: 0px !important;
    display: inline !important;
}

::-webkit-scrollbar {
    width: 12px;
}

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}

